Trying to fix button issue on iPhone display.

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -13,6 +13,10 @@
   background-position: 50% 30%;
   background-repeat: no-repeat;
   color: white;
+  button{
+    color: white;
+    text-align: center;
+  }
 }
 
 @media(max-width: 768px){}
